tests/cases/ffi/ok/ffi-c-shorthand.ari
extern fn puts(text: string) -> i32;

fn main() -> i64 {
  puts("ffi-c-shorthand-ok");
  return 0;
}

