tests/cases/ffi/errors/extern-generic.ari
extern "C" fn id[T](value: T) -> T;

fn main() -> i64 {
  return 0;
}

